# aiographql-client

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .sonarcloud.properties  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: code-quality.yml  release.yml  skip.yml  test-suite.yml
aiographql/client/: __init__.py  client.py  error.py  exceptions.py  request.py  response.py  subscription.py  transaction.py
docs/: api.rst  conf.py  contributing.rst  examples.rst  index.html  index.rst  introduction.rst  requirements.txt  transport.rst
docs/_includes/: queries.rst  subscriptions.rst  validation.rst
docs/api/: client.rst  constants.rst  data.rst  exceptions.rst
src/aiographql/client/: __init__.py  client.py  error.py  exceptions.py  helpers.py  request.py  response.py  subscription.py
tests/: conftest.py  test_aiographql_client.py  test_asyncio_loop.py  test_client.py  test_client_apollo_v2.py  test_error.py  test_headers.py  test_request.py  test_response.py  test_subscription.py
tests/integration/: conftest.py  test_client.py  test_graphql_pokemon.py
tests/servers/apollo-server/v2/: .dockerignore  Dockerfile  README.md  index.js  package.json
